--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -76,7 +76,7 @@
 
 .slider .containerp .item .left .left-container p {
     margin-top: 10px;
-    font-size: 17px;
+    /* font-size: 17px; */
     color: white;
 }
 
