--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -165,15 +165,15 @@
         margin-top: 0.5rem;
     }
     .head0 {
-        margin-top: 6rem;
+        margin-top: 3.5rem;
         
     }
     .head1 {
         margin-top: 1rem;
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     .skn {
-        font-size: 1rem;
+        font-size: 0.7rem;
     }
     .containersk {
         clip-path: inset(7% 0 5% 0);
@@ -192,10 +192,10 @@
     }
     .head1 {
         font-size: 0.7rem;
-        margin-top: 1.5rem;
+        /* margin-top: 1.5rem; */
     }
     .skn {
-        font-size: 0.7rem;
+        font-size: 0.5rem;
     }
     .containersk {
         clip-path: inset(7% 0 5% 0);
@@ -328,7 +328,7 @@
 
 @media (max-width:411px) {
     .head0{
-        margin-top: 6rem;
+        margin-top: 4.5rem;
         margin-bottom: 0;
     }
     .head1 {
@@ -349,7 +349,7 @@
         top: 0;
     }
     .s-icon {
-        size: 20;
+        font-size: 20;
     }
     .containersk {
         clip-path: inset(7% 0 0% 0);
@@ -395,7 +395,7 @@
         clip-path: inset(7% 0 15% 0);
     }
 }
-@media screen and (max-width:328px) {
+/* @media screen and (max-width:328px) {
     
     .cardsk4 {
        margin-right: 40px;
@@ -410,7 +410,7 @@
        max-width: 80px;
     }
 
-}
+} */
 
 
 
